--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve my-site",
-    "start-myop": "nx run-many --parallel --target=serve --projects=my-site,dashboard",
+    "start-site-only": "nx serve my-site",
+    "start": "nx run-many --parallel --target=serve --projects=my-site,dashboard",
     "build": "nx build",
     "test": "nx test"
   },
@@ -25,12 +25,12 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.0.0",
-    "@angular-devkit/core": "~19.0.0",
-    "@angular-devkit/schematics": "~19.0.0",
-    "@angular/cli": "~19.0.0",
-    "@angular/compiler-cli": "~19.0.0",
-    "@angular/language-service": "~19.0.0",
+    "@angular-devkit/build-angular": "~19.0.6",
+    "@angular-devkit/core": "~19.0.6",
+    "@angular-devkit/schematics": "~19.0.6",
+    "@angular/cli": "~19.0.6",
+    "@angular/compiler-cli": "~19.0.6",
+    "@angular/language-service": "~19.0.6",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "20.3.1",
     "@nx/eslint": "20.3.1",
