--- a/package.json
+++ b/package.json
@@ -10,27 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.0.0",
-    "@angular/common": "~19.0.0",
-    "@angular/compiler": "~19.0.0",
-    "@angular/core": "~19.0.0",
-    "@angular/forms": "~19.0.0",
-    "@angular/platform-browser": "~19.0.0",
-    "@angular/platform-browser-dynamic": "~19.0.0",
-    "@angular/router": "~19.0.0",
-    "@angular/elements": "~19.0.0",
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@angular/elements": "^19.0.0",
     "@myop/sdk": "file://Users/Hadar/projects/myop/myop-sdk",
+    "@myop/angular" : "file://Users/Hadar/projects/myop/myop-angular-host/dist/components",
+    "@myop/angular-remote" : "file://Users/Hadar/projects/myop/myop-angular-remote",
     "angular-in-memory-web-api": "^0.19.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.0.6",
-    "@angular-devkit/core": "~19.0.6",
-    "@angular-devkit/schematics": "~19.0.6",
-    "@angular/cli": "~19.0.6",
-    "@angular/compiler-cli": "~19.0.6",
-    "@angular/language-service": "~19.0.6",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular-devkit/core": "^19.0.0",
+    "@angular-devkit/schematics": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "@angular/language-service": "^19.0.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "20.3.1",
     "@nx/eslint": "20.3.1",
@@ -39,14 +41,14 @@
     "@nx/js": "20.3.1",
     "@nx/web": "20.3.1",
     "@nx/workspace": "20.3.1",
-    "@schematics/angular": "~19.0.0",
+    "@schematics/angular": "^19.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
-    "angular-eslint": "^19.0.2",
+    "angular-eslint": "^19.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -54,7 +56,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "~19.0.0",
+    "ng-packagr": "^19.0.0",
     "nx": "20.3.1",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
