--- a/apps/my-site/project.json
+++ b/apps/my-site/project.json
@@ -10,6 +10,7 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "preserveSymlinks" : true,
         "outputPath": "dist/apps/my-site",
         "index": "apps/my-site/src/index.html",
         "browser": "apps/my-site/src/main.ts",
