--- a/libs/dashboard/project.json
+++ b/libs/dashboard/project.json
@@ -10,6 +10,7 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "preserveSymlinks" : true,
         "outputPath": "dist/libs/dashboard",
         "index": "libs/dashboard/src/index.html",
         "browser": "libs/dashboard/src/index.ts",
